fix:overflow hidden

--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+  body section .row{
+    margin: 0;
+  }
   #timer {
     margin-right: auto;
     margin-left: auto;
